--- a/archives/toutiao-search/2024-01-13.md
+++ b/archives/toutiao-search/2024-01-13.md
@@ -1,61 +1,83 @@
 # 2024-01-13
 
-共 140 条
+共 158 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Jan 13 2024 11:00:53 GMT+0800 (China Standard Time) -->
-1. [胡塞指责美英为保护以色列发动袭击](https://so.toutiao.com/search?keyword=胡塞指责美英为保护以色列发动袭击)
+<!-- 最后更新时间 Sat Jan 13 2024 12:00:39 GMT+0800 (China Standard Time) -->
+1. [媒体：美方打击胡塞武装在意料之中](https://so.toutiao.com/search?keyword=媒体：美方打击胡塞武装在意料之中)
 1. [美英缘何打击胡塞武装](https://so.toutiao.com/search?keyword=美英缘何打击胡塞武装)
 1. [中国货物贸易有望保持全球第一](https://so.toutiao.com/search?keyword=中国货物贸易有望保持全球第一)
+1. [侯友宜：这一票是为台海安定而投](https://so.toutiao.com/search?keyword=侯友宜：这一票是为台海安定而投)
+1. [马伊琍听游本昌发言落泪](https://so.toutiao.com/search?keyword=马伊琍听游本昌发言落泪)
+1. [山东文旅让山东人沉默了](https://so.toutiao.com/search?keyword=山东文旅让山东人沉默了)
+1. [霍尊疑似复出](https://so.toutiao.com/search?keyword=霍尊疑似复出)
+1. [中方就美方攻击胡塞武装表态](https://so.toutiao.com/search?keyword=中方就美方攻击胡塞武装表态)
+1. [美防长1月3日命殒基辅？假的](https://so.toutiao.com/search?keyword=美防长1月3日命殒基辅？假的)
+1. [河南景区上演“美男计”](https://so.toutiao.com/search?keyword=河南景区上演“美男计”)
+1. [台湾今日“大选”投票](https://so.toutiao.com/search?keyword=台湾今日“大选”投票)
+1. [胡歌暖心搀扶游本昌上台](https://so.toutiao.com/search?keyword=胡歌暖心搀扶游本昌上台)
+1. [王家卫说女孩晚上拍最美](https://so.toutiao.com/search?keyword=王家卫说女孩晚上拍最美)
+1. [侯友宜“选前之夜”强调反“台独”](https://so.toutiao.com/search?keyword=侯友宜“选前之夜”强调反“台独”)
+1. [唐嫣蹲着和游本昌说话](https://so.toutiao.com/search?keyword=唐嫣蹲着和游本昌说话)
+1. [美国连续第二天空袭胡塞目标](https://so.toutiao.com/search?keyword=美国连续第二天空袭胡塞目标)
+1. [河南煤矿事故已致8人遇难8人失联](https://so.toutiao.com/search?keyword=河南煤矿事故已致8人遇难8人失联)
+1. [程前和董宇辉差距在哪里](https://so.toutiao.com/search?keyword=程前和董宇辉差距在哪里)
+1. [吴谢宇再写道歉信：愿给母家两套房](https://so.toutiao.com/search?keyword=吴谢宇再写道歉信：愿给母家两套房)
+1. [缅甸各方在昆明达成停火协议](https://so.toutiao.com/search?keyword=缅甸各方在昆明达成停火协议)
+1. [侯友宜：美最危险3“朋友”2个开战](https://so.toutiao.com/search?keyword=侯友宜：美最危险3“朋友”2个开战)
+1. [记者实探众筹1.2亿建别墅的博陆村](https://so.toutiao.com/search?keyword=记者实探众筹1.2亿建别墅的博陆村)
+1. [北大校花谈演艺圈潜规则：能挣几百万](https://so.toutiao.com/search?keyword=北大校花谈演艺圈潜规则：能挣几百万)
+1. [成都街头艺人演唱获刘欢点赞](https://so.toutiao.com/search?keyword=成都街头艺人演唱获刘欢点赞)
+1. [以色列与南非就“种族灭绝”交锋](https://so.toutiao.com/search?keyword=以色列与南非就“种族灭绝”交锋)
+1. [刘建超会见美国国务卿布林肯](https://so.toutiao.com/search?keyword=刘建超会见美国国务卿布林肯)
+1. [女子硬扛流感10天 两个肺都白了](https://so.toutiao.com/search?keyword=女子硬扛流感10天+两个肺都白了)
+1. [第一批回村的单身小伙展示实力](https://so.toutiao.com/search?keyword=第一批回村的单身小伙展示实力)
+1. [一页1996年日历卖到45元](https://so.toutiao.com/search?keyword=一页1996年日历卖到45元)
+1. [安徽文旅连夜听劝](https://so.toutiao.com/search?keyword=安徽文旅连夜听劝)
+1. [WTT多哈赛国乒提前包揽全部冠军](https://so.toutiao.com/search?keyword=WTT多哈赛国乒提前包揽全部冠军)
+1. [张艺谋说对赵丽颖表演非常满意](https://so.toutiao.com/search?keyword=张艺谋说对赵丽颖表演非常满意)
+1. [23岁男大学生赴日滑雪身亡](https://so.toutiao.com/search?keyword=23岁男大学生赴日滑雪身亡)
+1. [美国防部：空袭胡塞武装效果良好](https://so.toutiao.com/search?keyword=美国防部：空袭胡塞武装效果良好)
+1. [美国白宫：对乌克兰军事支持已暂停](https://so.toutiao.com/search?keyword=美国白宫：对乌克兰军事支持已暂停)
+1. [媒体人：国足首战须控制动作和情绪](https://so.toutiao.com/search?keyword=媒体人：国足首战须控制动作和情绪)
+1. [遭袭后胡塞“阴影领导人”佩刀出镜](https://so.toutiao.com/search?keyword=遭袭后胡塞“阴影领导人”佩刀出镜)
+1. [2023年中国进出口总值41.76万亿元](https://so.toutiao.com/search?keyword=2023年中国进出口总值41.76万亿元)
+1. [以军称发现哈马斯扣押人质的隧道](https://so.toutiao.com/search?keyword=以军称发现哈马斯扣押人质的隧道)
+1. [美英空袭也门对红海局势有何影响](https://so.toutiao.com/search?keyword=美英空袭也门对红海局势有何影响)
+1. [我国将迎来一次大范围雨雪天气过程](https://so.toutiao.com/search?keyword=我国将迎来一次大范围雨雪天气过程)
+1. [程前穿红衣现身周鸿祎演讲现场](https://so.toutiao.com/search?keyword=程前穿红衣现身周鸿祎演讲现场)
+1. [美考虑重新将胡塞武装列为恐怖组织](https://so.toutiao.com/search?keyword=美考虑重新将胡塞武装列为恐怖组织)
+1. [警方通报大一女生校内坠楼身亡](https://so.toutiao.com/search?keyword=警方通报大一女生校内坠楼身亡)
+1. [妈妈公交车上怒斥霸凌儿子的同学](https://so.toutiao.com/search?keyword=妈妈公交车上怒斥霸凌儿子的同学)
+1. [东北小姐姐第一次吃东北蔓越莓](https://so.toutiao.com/search?keyword=东北小姐姐第一次吃东北蔓越莓)
+1. [官方回应村民向纪委反映情况被怼](https://so.toutiao.com/search?keyword=官方回应村民向纪委反映情况被怼)
+1. [董宇辉给冯仑周鸿祎等大佬“讲课”](https://so.toutiao.com/search?keyword=董宇辉给冯仑周鸿祎等大佬“讲课”)
+1. [小砂糖橘清亦生病了想吃锅包肉](https://so.toutiao.com/search?keyword=小砂糖橘清亦生病了想吃锅包肉)
+1. [中国版“星链”引俄媒关注](https://so.toutiao.com/search?keyword=中国版“星链”引俄媒关注)
+1. [胡塞指责美英为保护以色列发动袭击](https://so.toutiao.com/search?keyword=胡塞指责美英为保护以色列发动袭击)
 1. [胡歌：拍繁花最后一个镜头有点失落](https://so.toutiao.com/search?keyword=胡歌：拍繁花最后一个镜头有点失落)
 1. [一楼违建阳光房 多部门阻止未果](https://so.toutiao.com/search?keyword=一楼违建阳光房+多部门阻止未果)
-1. [一页1996年日历卖到45元](https://so.toutiao.com/search?keyword=一页1996年日历卖到45元)
-1. [山东文旅让山东人沉默了](https://so.toutiao.com/search?keyword=山东文旅让山东人沉默了)
 1. [山东“17根小葱花”勇闯哈尔滨](https://so.toutiao.com/search?keyword=山东“17根小葱花”勇闯哈尔滨)
-1. [美防长1月3日命殒基辅？假的](https://so.toutiao.com/search?keyword=美防长1月3日命殒基辅？假的)
-1. [马伊琍听游本昌发言落泪](https://so.toutiao.com/search?keyword=马伊琍听游本昌发言落泪)
-1. [台湾今日“大选”投票](https://so.toutiao.com/search?keyword=台湾今日“大选”投票)
 1. [胡塞称对美英军舰发动了报复性打击](https://so.toutiao.com/search?keyword=胡塞称对美英军舰发动了报复性打击)
-1. [胡歌暖心搀扶游本昌上台](https://so.toutiao.com/search?keyword=胡歌暖心搀扶游本昌上台)
-1. [唐嫣蹲着和游本昌说话](https://so.toutiao.com/search?keyword=唐嫣蹲着和游本昌说话)
-1. [缅甸各方在昆明达成停火协议](https://so.toutiao.com/search?keyword=缅甸各方在昆明达成停火协议)
 1. [官方通报国企领导出轨下属致其流产](https://so.toutiao.com/search?keyword=官方通报国企领导出轨下属致其流产)
-1. [侯友宜“选前之夜”强调反“台独”](https://so.toutiao.com/search?keyword=侯友宜“选前之夜”强调反“台独”)
-1. [王家卫说女孩晚上拍最美](https://so.toutiao.com/search?keyword=王家卫说女孩晚上拍最美)
-1. [中方就美方攻击胡塞武装表态](https://so.toutiao.com/search?keyword=中方就美方攻击胡塞武装表态)
 1. [华晨宇宋亚轩演泰坦尼克号](https://so.toutiao.com/search?keyword=华晨宇宋亚轩演泰坦尼克号)
-1. [河南景区上演“美男计”](https://so.toutiao.com/search?keyword=河南景区上演“美男计”)
 1. [科兴新冠疫苗停产背后](https://so.toutiao.com/search?keyword=科兴新冠疫苗停产背后)
-1. [霍尊疑似复出](https://so.toutiao.com/search?keyword=霍尊疑似复出)
 1. [我为河北文旅举大旗](https://so.toutiao.com/search?keyword=我为河北文旅举大旗)
-1. [河南煤矿事故已致8人遇难8人失联](https://so.toutiao.com/search?keyword=河南煤矿事故已致8人遇难8人失联)
-1. [吴谢宇再写道歉信：愿给母家两套房](https://so.toutiao.com/search?keyword=吴谢宇再写道歉信：愿给母家两套房)
-1. [女子硬扛流感10天 两个肺都白了](https://so.toutiao.com/search?keyword=女子硬扛流感10天+两个肺都白了)
 1. [医生收红包后充值到患者住院账户](https://so.toutiao.com/search?keyword=医生收红包后充值到患者住院账户)
 1. [各地文旅官方账号“杀疯了”](https://so.toutiao.com/search?keyword=各地文旅官方账号“杀疯了”)
-1. [警方通报大一女生校内坠楼身亡](https://so.toutiao.com/search?keyword=警方通报大一女生校内坠楼身亡)
-1. [成都街头艺人演唱获刘欢点赞](https://so.toutiao.com/search?keyword=成都街头艺人演唱获刘欢点赞)
 1. [国防部：要求美方停止危险挑衅行径](https://so.toutiao.com/search?keyword=国防部：要求美方停止危险挑衅行径)
 1. [马伊琍称拍繁花3年很累被吐槽卖惨](https://so.toutiao.com/search?keyword=马伊琍称拍繁花3年很累被吐槽卖惨)
 1. [白宫遭质疑未经批准擅自出兵](https://so.toutiao.com/search?keyword=白宫遭质疑未经批准擅自出兵)
-1. [张艺谋说对赵丽颖表演非常满意](https://so.toutiao.com/search?keyword=张艺谋说对赵丽颖表演非常满意)
-1. [美国白宫：对乌克兰军事支持已暂停](https://so.toutiao.com/search?keyword=美国白宫：对乌克兰军事支持已暂停)
 1. [阿根廷2023年累计通胀率达211.4%](https://so.toutiao.com/search?keyword=阿根廷2023年累计通胀率达211.4%)
-1. [程前和董宇辉差距在哪里](https://so.toutiao.com/search?keyword=程前和董宇辉差距在哪里)
 1. [文莱“亚洲最帅王子”迎娶平民妻子](https://so.toutiao.com/search?keyword=文莱“亚洲最帅王子”迎娶平民妻子)
 1. [沈腾说加上一个玲是一百分](https://so.toutiao.com/search?keyword=沈腾说加上一个玲是一百分)
 1. [狗子吃席坐半天没人给夹菜](https://so.toutiao.com/search?keyword=狗子吃席坐半天没人给夹菜)
 1. [上海地铁两女子大打出手 警方介入](https://so.toutiao.com/search?keyword=上海地铁两女子大打出手+警方介入)
-1. [北大校花谈演艺圈潜规则：能挣几百万](https://so.toutiao.com/search?keyword=北大校花谈演艺圈潜规则：能挣几百万)
 1. [上海男篮伤情公告：五人受伤病侵袭](https://so.toutiao.com/search?keyword=上海男篮伤情公告：五人受伤病侵袭)
-1. [妈妈公交车上怒斥霸凌儿子的同学](https://so.toutiao.com/search?keyword=妈妈公交车上怒斥霸凌儿子的同学)
-1. [我国将迎来一次大范围雨雪天气过程](https://so.toutiao.com/search?keyword=我国将迎来一次大范围雨雪天气过程)
-1. [23岁男大学生赴日滑雪身亡](https://so.toutiao.com/search?keyword=23岁男大学生赴日滑雪身亡)
 1. [媒体：赵丽颖的银幕之路越走越宽](https://so.toutiao.com/search?keyword=媒体：赵丽颖的银幕之路越走越宽)
 1. [张小斐演“贾玲”](https://so.toutiao.com/search?keyword=张小斐演“贾玲”)
 1. [贾玲导演新片《热辣滚烫》首曝预告](https://so.toutiao.com/search?keyword=贾玲导演新片《热辣滚烫》首曝预告)
 1. [胡塞武装称将继续打击与以相关船只](https://so.toutiao.com/search?keyword=胡塞武装称将继续打击与以相关船只)
-1. [美英空袭也门对红海局势有何影响](https://so.toutiao.com/search?keyword=美英空袭也门对红海局势有何影响)
 1. [天舟六号顺利撤离空间站组合体](https://so.toutiao.com/search?keyword=天舟六号顺利撤离空间站组合体)
 1. [钢铁厂高炉检修冲出煤灰 官方介入](https://so.toutiao.com/search?keyword=钢铁厂高炉检修冲出煤灰+官方介入)
 1. [广西“小沃柑”高调闯山东](https://so.toutiao.com/search?keyword=广西“小沃柑”高调闯山东)
@@ -64,7 +86,6 @@
 1. [洛阳：高铁站安排185古装猛男接驾](https://so.toutiao.com/search?keyword=洛阳：高铁站安排185古装猛男接驾)
 1. [樊振东因伤退出WTT挑战赛多哈站](https://so.toutiao.com/search?keyword=樊振东因伤退出WTT挑战赛多哈站)
 1. [刘亦菲NBA梦幻联动](https://so.toutiao.com/search?keyword=刘亦菲NBA梦幻联动)
-1. [小砂糖橘清亦生病了想吃锅包肉](https://so.toutiao.com/search?keyword=小砂糖橘清亦生病了想吃锅包肉)
 1. [无人机拧灯泡拧出空间站对接的感觉](https://so.toutiao.com/search?keyword=无人机拧灯泡拧出空间站对接的感觉)
 1. [山西警方悬赏20万的重案嫌犯已被抓](https://so.toutiao.com/search?keyword=山西警方悬赏20万的重案嫌犯已被抓)
 1. [马伊琍：王家卫拍出自己最美的样子](https://so.toutiao.com/search?keyword=马伊琍：王家卫拍出自己最美的样子)
@@ -81,7 +102,6 @@
 1. [洛阳文旅主打一个听劝](https://so.toutiao.com/search?keyword=洛阳文旅主打一个听劝)
 1. [胡塞回应美英空袭：会惩罚他们](https://so.toutiao.com/search?keyword=胡塞回应美英空袭：会惩罚他们)
 1. [特斯拉Model 3/Y降价](https://so.toutiao.com/search?keyword=特斯拉Model+3/Y降价)
-1. [程前穿红衣现身周鸿祎演讲现场](https://so.toutiao.com/search?keyword=程前穿红衣现身周鸿祎演讲现场)
 1. [河南文旅上演“美人计”](https://so.toutiao.com/search?keyword=河南文旅上演“美人计”)
 1. [0713男团现身2024央视春晚彩排](https://so.toutiao.com/search?keyword=0713男团现身2024央视春晚彩排)
 1. [河南景区上演“美男计”吸引外地游客](https://so.toutiao.com/search?keyword=河南景区上演“美男计”吸引外地游客)
@@ -114,7 +134,6 @@
 1. [美供乌10亿美元军援未得到适当追踪](https://so.toutiao.com/search?keyword=美供乌10亿美元军援未得到适当追踪)
 1. [妄图倚美谋“独” 民进党能得逞吗](https://so.toutiao.com/search?keyword=妄图倚美谋“独”+民进党能得逞吗)
 1. [广东一地天降百斤不明金属砸裂房屋](https://so.toutiao.com/search?keyword=广东一地天降百斤不明金属砸裂房屋)
-1. [以色列与南非就“种族灭绝”交锋](https://so.toutiao.com/search?keyword=以色列与南非就“种族灭绝”交锋)
 1. [《繁花》超越《三体》成为新招商王](https://so.toutiao.com/search?keyword=《繁花》超越《三体》成为新招商王)
 1. [法国最年轻总理能否推进马克龙改革](https://so.toutiao.com/search?keyword=法国最年轻总理能否推进马克龙改革)
 1. [孙卫东会见日本新任驻华大使](https://so.toutiao.com/search?keyword=孙卫东会见日本新任驻华大使)
@@ -133,7 +152,6 @@
 1. [胡塞武装会成为“也门版真主党”吗](https://so.toutiao.com/search?keyword=胡塞武装会成为“也门版真主党”吗)
 1. [台湾学者痛批民进党不知廉耻为何物](https://so.toutiao.com/search?keyword=台湾学者痛批民进党不知廉耻为何物)
 1. [60岁倪夏莲淘汰19岁国乒新星](https://so.toutiao.com/search?keyword=60岁倪夏莲淘汰19岁国乒新星)
-1. [东北小姐姐第一次吃东北蔓越莓](https://so.toutiao.com/search?keyword=东北小姐姐第一次吃东北蔓越莓)
 1. [7人卖51万个甜蜜素“毒馒头”获刑](https://so.toutiao.com/search?keyword=7人卖51万个甜蜜素“毒馒头”获刑)
 1. [小伙在北极偶遇四川老乡](https://so.toutiao.com/search?keyword=小伙在北极偶遇四川老乡)
 1. [消息称OPPO Watch4即将推出](https://so.toutiao.com/search?keyword=消息称OPPO+Watch4即将推出)
